--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ author: Blazequartz
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
  Something something this is actually pretty cool something something complete
+ theme: minima
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
